[FIX] Wardrobe GUI add overflow and improvements

--- a/pandora-client-web/src/components/wardrobe/wardrobe.scss
+++ b/pandora-client-web/src/components/wardrobe/wardrobe.scss
@@ -60,6 +60,7 @@ $header-height: 2em;
 		flex-direction: row;
 		padding: 0.25em 0.25em;
 		gap: 0.3em;
+		border-bottom: solid black 1px;
 
 		span {
 			flex: 1;
@@ -184,7 +185,8 @@ $header-height: 2em;
 
 .wardrobeActionButton {
 	@include center-flex;
-	min-height: 2em;
+	min-height: 2.5em;
+	min-width: 2.5em;
 	border: 1px solid black;
 
 	background-color: $grey-lighter;
